Fix z-index in more places

--- a/public/s/styles/scss/_popover.scss
+++ b/public/s/styles/scss/_popover.scss
@@ -11,7 +11,7 @@
 		right: 0;
 		bottom: 0;
 		left: 0;
-		z-index: 80;
+		z-index: 700;
 	}
 
 	%popover-arrow {
@@ -27,7 +27,7 @@
 		border-color: darken($light-color, 30%);
 		border-style: solid;
 		border-width: 1px 0 0 1px;
-		z-index: 90;
+		z-index: 800;
 	}
 
 	.popover-body {
@@ -42,7 +42,7 @@
 		color: $dark-color;
 		box-shadow: 0 0 10px 0 rgba(0,0,0,.15);
 		text-transform: none;
-		z-index: 100;
+		z-index: 900;
 
 		&.popover-top {
 			@extend %slideup;
